fixed spacing - i promise last change

--- a/css/case.css
+++ b/css/case.css
@@ -89,7 +89,7 @@ body {
 .case {
   display: grid;
   grid-gap: 60px;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   animation: 0.6s ease-in-out 0s 1 slideInFromBottom;
   margin: 10em;
   margin-top: 6em;
